# bluescraper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: scrape-demo.py
notebooks/: analyze-soup.ipynb
src/bluescraper/: config.py  constants.py  fileutils.py  scraper.py  utils.py  validation.py
tests/: conftest.py
tests/data/bluescraper/config/: config-groups.yml  config-handelsblatt.yml  config-multiple-groups.yml  config-no-validation.yml  config.json  config.yml  invalid-config.yml
tests/data/bluescraper/html/: handelsblatt.html  invalid.html  valid-groups-group-not-complete.html  valid-groups.html  valid.html
tests/unit/: test_bluescraper.py  test_helper.py
